# data-structures

./: .clang-format  .gitignore  CMakeLists.txt  README.md  inheritance.cpp  main.cpp  mystruct.h  test_thread.cpp
alt_vector/: CMakeLists.txt
alt_vector/src/include/alt_vector/: alt_vector.h  construct.h
alt_vector/src/tests/: alt_vector_test.cpp
docs/: questions-pdf.md  questions.md
docs/anki/: README.md  q01-cpp-features-cards.md  q02-c-vs-cpp-cards.md  q03-oop-cpp-cards.md
docs/anki/md2anki/: q01-cpp-features-cards.md  q02-c-vs-cpp-cards.md  q03-oop-cpp-cards.md
docs/mochi/: CONVERSION.md  README.md
docs/mochi/10-cpp-basics-and-language-features/: q01-what-are-the-main-features-of-cpp.md  q05-explain-the-concept-of-namespaces-in-cpp.md  q06-what-is-the-difference-between-struct-and-class-in-cpp.md  q07-what-is-a-constructor-and-what-are-its-types-in-cpp.md  q08-explain-the-concept-of-destructors-in-cpp.md  q09-what-is-function-overloading-in-cpp.md
docs/mochi/100-performance-and-optimization/: q100-how-do-you-implement-and-use-lock-free-data-structures-for-better-concurrency-performance.md  q91-what-is-cache-coherence-and-how-does-it-affect-cpp-program-performance.md  q93-explain-the-concept-of-branch-prediction-and-its-impact-on-performance.md  q95-how-do-you-profile-cpp-code-for-performance-optimization.md  q96-what-is-the-difference-between-constexpr-and-inline-functions-in-terms-of-performance.md  q97-explain-the-concept-of-false-sharing-and-how-to-avoid-it.md  q98-how-do-you-optimize-code-for-modern-cpu-architectures-e-g-simd-instructions.md
docs/mochi/20-memory-management-and-pointers/: q11-what-is-dynamic-memory-allocation-in-cpp.md  q12-explain-the-difference-between-new-and-malloc.md  q13-what-is-a-memory-leak-and-how-can-it-be-prevented.md  q16-what-is-the-difference-between-unique-ptr-shared-ptr-and-weak-ptr.md  q18-what-is-the-rule-of-three-in-cpp.md  q20-explain-move-semantics-in-cpp.md
docs/mochi/30-object-oriented-programming-concepts/: q21-what-is-inheritance-in-c-explain-its-types.md  q22-what-is-polymorphism-and-how-is-it-implemented-in-c.md  q23-explain-the-concept-of-virtual-functions-in-c.md  q27-what-is-function-hiding-in-c.md  q30-what-is-raii-resource-acquisition-is-initialization-in-c.md
docs/mochi/40-templates-and-generic-programming/: q31-what-are-templates-in-c.md  q32-explain-the-difference-between-function-templates-and-class-templates.md  q33-what-is-template-specialization.md  q34-how-does-template-metaprogramming-work-in-c.md  q35-what-are-variadic-templates.md  q36-explain-the-concept-of-type-traits-in-c.md  q37-what-is-sfinae-substitution-failure-is-not-an-error.md  q39-what-are-the-advantages-and-disadvantages-of-using-templates.md  q40-explain-the-concept-of-template-argument-deduction.md
docs/mochi/50-exception-handling/: q41-what-is-exception-handling-in-c.md  q42-explain-the-try-catch-and-throw-keywords.md  q43-what-is-the-purpose-of-the-noexcept-specifier.md  q44-how-do-you-create-custom-exception-classes.md  q45-what-happens-if-an-exception-is-not-caught.md  q46-explain-the-concept-of-exception-safety.md  q47-what-is-the-difference-between-synchronous-and-asynchronous-exceptions.md
docs/mochi/60-standard-template-library/: q52-explain-the-difference-between-vector-and-list-in-stl.md  q54-how-does-an-unordered-map-work-internally.md  q55-what-is-the-difference-between-set-and-multiset.md  q56-explain-the-concept-of-iterators-in-stl.md  q57-what-are-function-objects-functors-in-stl.md  q58-how-do-you-use-algorithms-like-sort-find-and-binary-search-in-stl.md  q59-what-is-the-purpose-of-std-pair-and-std-tuple.md  q60-explain-the-concept-of-allocators-in-stl.md
docs/mochi/70-concurrency-and-multithreading/: q62-how-do-you-create-and-manage-threads-using-std-thread.md  q63-explain-the-concept-of-mutex-and-its-types-in-c.md  q64-what-is-a-deadlock-and-how-can-it-be-prevented.md  q66-what-is-the-purpose-of-std-atomic.md  q67-explain-the-difference-between-std-async-and-std-thread.md  q68-what-is-a-thread-pool-and-how-would-you-implement-one.md  q69-how-do-you-handle-race-conditions-in-c.md  q70-explain-the-concept-of-memory-ordering-in-c-concurrency.md
docs/mochi/80-cpp11-and-beyond-features/: q71-what-are-lambda-expressions-in-c.md  q72-explain-the-auto-keyword-and-type-inference.md  q73-what-is-uniform-initialization-in-cpp11.md  q74-how-does-range-based-for-loop-work.md  q75-what-are-delegating-constructors.md  q77-what-is-perfect-forwarding-in-c.md  q78-how-do-you-use-std-chrono-for-time-related-operations.md  q79-what-are-the-improvements-in-smart-pointers-introduced-in-cpp11.md  q80-explain-the-concept-of-constexpr.md
docs/mochi/90-advanced-cpp-concepts/: q81-what-is-crtp-curiously-recurring-template-pattern.md  q82-explain-the-concept-of-type-erasure-in-c.md  q83-what-are-fold-expressions-in-cpp17.md  q84-how-do-you-implement-a-singleton-pattern-in-c.md  q86-explain-the-concept-of-concepts-in-cpp20.md  q88-how-do-you-use-std-variant-and-std-visit.md  q89-what-is-the-purpose-of-std-any.md
docs/mochi/advanced-cpp-concepts/: q81-what-is-crtp-curiously-recurring-template-pattern.md  q82-explain-the-concept-of-type-erasure-in-c.md  q83-what-are-fold-expressions-in-cpp17.md  q84-how-do-you-implement-a-singleton-pattern-in-c.md  q85-what-is-the-purpose-of-std-optional.md  q86-explain-the-concept-of-concepts-in-cpp20.md  (+4 more)
docs/pandoc/: README.md  embed-images.lua  group-code-headings.lua  indent-list-code.lua  markdown-pdf.css  pdf-header.tex  pdf.yaml
exception/: CMakeLists.txt  exception.h
mystruct/: CMakeLists.txt  mystruct_test.cpp
old/: DataStructures.cpp
old/include/: ArrayList.hpp  LinkedList.hpp
old/test/: ArrayListTest.cpp  Test.cpp
scripts/: anki-md2anki.sh  cards_md_to_md2anki.py
(+136 files in other folders)
